measures against Session Hijacking
