# ros2/rdbox/sros2_oidc/relaying_party/swagger/swagger.yaml
@@ -122,14 +122,6 @@ paths:
       tags:
       - ros2_amcl
       operationId: come_to_me
-      parameters:
-      - name: csrf
-        in: query
-        required: false
-        style: form
-        explode: true
-        schema:
-          type: string
       responses:
         "200":
           description: OK
